# pwgen-operator

./: Dockerfile  README.md  pwgen.py  pyproject.toml
.circleci/: config.yml
.github/workflows/: main.yml
deploy/: crd.yaml  sample.yaml
deploy/k8s/: deployment.yaml  role.yaml  role_binding.yaml  serviceaccount.yaml
