[tool.poetry]
name = "pwgen"
version = "0.1.0"
description = "kubernetes operator for creating random strings"
authors = ["Dann Bohn <djb44@psu.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
kopf = "^0.27"
kubernetes = "^11"
black = "^19.10b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
